# strangeloop

./: .gitignore  README.md  pyproject.toml
config/: default.json
config/examples/: small_town.json  startup.json
prompts/: system_prompts.json
strangeloop/: __init__.py  cli.py
strangeloop/brancher/: __init__.py  generator.py
strangeloop/cc_me/: __init__.py
strangeloop/clapboard/: __init__.py  presets.py
strangeloop/copycat/: __init__.py
strangeloop/daity/: __init__.py  engine.py
strangeloop/ego_loop/: __init__.py  loop.py
strangeloop/embeddings/: __init__.py
strangeloop/eventgen/: __init__.py  generator.py
strangeloop/gpt_genius/: __init__.py  client.py
strangeloop/knobs/: __init__.py  controller.py  envelope.py
strangeloop/mapel/: __init__.py
strangeloop/persona2parameters/: __init__.py  mapper.py
strangeloop/relgen/: __init__.py  generator.py
strangeloop/schemas/: __init__.py  animism.py  dialog.py  event.py  relationship.py  simulation.py  synth.py  tensor.py
strangeloop/storage/: __init__.py  store.py
strangeloop/synthgen/: __init__.py  generator.py  prompts.py
strangeloop/tessera_ct/: __init__.py  assembler.py
strangeloop/visualization/: __init__.py  dashboard.py
tests/: __init__.py  test_brancher.py  test_daity.py  test_integration.py  test_synthgen.py
