[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "strangeloop"
version = "0.1.0"
description = "Strange Loop: A synthetic social network simulator for RLSF"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "openai>=1.0",
    "pydantic>=2.0",
    "sqlmodel>=0.0.14",
    "networkx>=3.0",
    "click>=8.0",
    "rich>=13.0",
    "python-dotenv>=1.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
strangeloop = "strangeloop.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["strangeloop"]
